--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -54,6 +54,11 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.center-div{
+  position: relative;
+  margin: auto;
+}
+
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
